# MIMIC-IV-ICU-Patient-Outcomes

./: README.md  consolidate_shards.py  main.py  pyproject.toml
data/: demo_subject_id.csv
data/flat_csv/hosp/: diagnoses_icd.csv  hcpcsevents.csv  procedures_icd.csv  provider.csv
data/flat_csv/icu/: caregiver.csv
data/hosp/diagnoses_icd.csv/: diagnoses_icd.csv
data/hosp/hcpcsevent.csv/: hcpcsevent.csv
data/hosp/procedures_icd.csv/: procedures_icd.csv
data/hosp/provider.csv/: provider.csv
data/icu/caregiver.csv/: caregiver.csv
data/icu/ingredientevents.csv/: ingredientevents.csv
data/icu/outputevents.csv/: outputevents.csv
data/icu/procedureevents.csv/: procedureevents.csv
notebooks & analytics/: ICU_Data_Preparation.ipynb  ICU_EDA.ipynb  ICU_Evaluation_&_Deployment.ipynb  ICU_Modeling.ipynb  analytic_admissions_dataset.csv  kmeans_clusters.pkl  los_random_forest.pkl  mortality_logreg.pkl  mortality_logreg_deployment.pkl
