[project]
name = "MIMIC-IV-ICU-Patient-Outcomes"
version = "0.1.0"
description = "Predictive modeling and operational analytics using the MIMIC-IV ICU dataset from MIT."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "scikit-learn==1.5.2"
]
